--- a/examples/tables/server/def-server-tables-config.yaml
+++ b/examples/tables/server/def-server-tables-config.yaml
@@ -24,8 +24,8 @@ login:
     secret: secret cat in the table
     loginForm:
       formTitle: example tables
-      formImg: unlogged/tables-lock.png
-    loginPagePath: examples/tables/unlogged
+      formImg: tables-lock.png
+    loginPagePath: examples/tables/client
 client-setup:
   cursors: true
 logo: 
